# free3ds

./: .gitignore  .travis.yml  AUTHORS.md  CMakeLists.txt  Dockerfile  ReadMe.md  TODO.md  appveyor.yml  circle.yml
cmake/: CMakeLists.txt  LIB3DS-bin.cmake  LIB3DS-lib.cmake  Lib3DS-bin.cmake  Lib3DS-docs.cmake  Lib3DS-lib.cmake  dependencies.cmake
msvc7/: 3dsplay.vcproj  lib3ds.vcproj
src/cli/: 3dsdump.c  3dsplay.c
src/lib/: free3ds.h
